--- a/debian/po/km.po
+++ b/debian/po/km.po
@@ -3,6 +3,26 @@
 #
 # DO NOT MODIFY THIS FILE DIRECTLY: SUCH CHANGES WILL BE LOST
 #
+# translation of km.po to Khmer
+# Khoem Sokhem <khoemsokhem@khmeros.info>, 2006, 2007, 2008, 2010.
+#   eng vannak <evannak@khmeros.info>, 2006.
+#   auk piseth <piseth_dv@khmeros.info>, 2006.
+#   Khoem Sokhem <khoemsokhem@khmeros.info>, 2006, 2010, 2012.
+# Translations from iso-codes:
+msgid ""
+msgstr ""
+"Project-Id-Version: km\n"
+"Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
+"POT-Creation-Date: 2011-09-27 22:48+0000\n"
+"PO-Revision-Date: \n"
+"Last-Translator: \n"
+"Language-Team: Khmer <support@khmeros.info>\n"
+"Language: km\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+
 #. Type: text
 #. Description
 #. :sl2:
@@ -13,7 +33,7 @@
 #. Short file system name (untranslatable in many languages)
 #: ../partman-btrfs.templates:1001 ../partman-btrfs.templates:3001
 msgid "btrfs"
-msgstr ""
+msgstr "btrfs"
 
 #. Type: text
 #. Description
@@ -21,4 +41,4 @@ msgstr ""
 #. File system name
 #: ../partman-btrfs.templates:2001
 msgid "btrfs journaling file system"
-msgstr ""
+msgstr "ប្រព័ន្ធ​ឯកសារ​ទិន្នានុប្បវត្តិ btrfs"
