--- a/debian/po/ku.po
+++ b/debian/po/ku.po
@@ -3,6 +3,32 @@
 #
 # DO NOT MODIFY THIS FILE DIRECTLY: SUCH CHANGES WILL BE LOST
 #
+# translation of ku.po to Kurdish
+# Kurdish messages for debian-installer.
+# Copyright (C) 2003 Software in the Public Interest, Inc.
+# This file is distributed under the same license as debian-installer.
+# Rizoyê Xerzî <riza dot seckin at gmail dot com>
+# Erdal Ronahi <erdal dot ronahi at gmail dot com>, 2008.
+# Erdal <erdal.ronahi@gmail.com>, 2010.
+# Erdal Ronahî <erdal.ronahi@gmail.com>, 2010.
+#
+# Translations from iso-codes:
+#   Erdal Ronahi <erdal.ronahi@gmail.com>, 2005.
+# Erdal Ronahi <erdal dot ronahi at gmail dot com>, 2007.
+msgid ""
+msgstr ""
+"Project-Id-Version: ku\n"
+"Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
+"POT-Creation-Date: 2011-09-27 22:48+0000\n"
+"PO-Revision-Date: 2010-08-16 00:19+0200\n"
+"Last-Translator: Erdal Ronahi <erdal.ronahi@gmail.com>\n"
+"Language-Team: Kurdish Team http://pckurd.net\n"
+"Language: ku\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n!= 1);\n"
+
 #. Type: text
 #. Description
 #. :sl2:
@@ -13,7 +39,7 @@
 #. Short file system name (untranslatable in many languages)
 #: ../partman-btrfs.templates:1001 ../partman-btrfs.templates:3001
 msgid "btrfs"
-msgstr ""
+msgstr "btrfs"
 
 #. Type: text
 #. Description
@@ -21,4 +47,4 @@ msgstr ""
 #. File system name
 #: ../partman-btrfs.templates:2001
 msgid "btrfs journaling file system"
-msgstr ""
+msgstr "Pergala pelan ya bijurnal btrfs"
