--- a/debian/po/ko.po
+++ b/debian/po/ko.po
@@ -7,7 +7,7 @@
 # Copyright (C) 2003,2004,2005,2008 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
 #
-# Changwoo Ryu <cwryu@debian.org>, 2010, 2011, 2012, 2014, 2015.
+# Changwoo Ryu <cwryu@debian.org>, 2010-2012, 2014-2015, 2017.
 #
 # Translations from iso-codes:
 # Copyright (C)
@@ -28,7 +28,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2015-05-17 09:49+0900\n"
+"PO-Revision-Date: 2017-02-11 12:13+0900\n"
 "Last-Translator: Changwoo Ryu <cwryu@debian.org>\n"
 "Language-Team:  Korean <debian-l10n-korean@lists.debian.org>\n"
 "Language: ko\n"
@@ -61,56 +61,51 @@ msgstr "BRTFS 저널링 파일 시스템"
 #. :sl2:
 #: ../partman-btrfs.templates:4001
 msgid "btrfs root file system not supported without separate /boot"
-msgstr ""
+msgstr "분리된 /boot 없이는 btrfs 루트 파일 시스템을 지원하지 않습니다"
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "Your root file system is a btrfs file system. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"루트 파일 시스템이 JFS 파일 시스템입니다. 설치 프로그램에서 기본으로 사용하"
-"는 부트로더에서 문제가 발생할 수 있습니다."
+"루트 파일 시스템이 btrfs 파일 시스템입니다. 이 파일시스템은 이 설치 프로그램"
+"에서 사용하는 부트로더에서 지원하지 않습니다."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:4001
-#, fuzzy
 msgid ""
 "You should use a small /boot partition with another file system, such as "
 "ext4."
 msgstr ""
-"작은 /boot 파티션을 만들어 ext3와 같은 다른 파일 시스템을 사용해야 합니다."
+"작은 /boot 파티션을 만들어 ext4와 같은 다른 파일 시스템을 사용해야 합니다."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid "btrfs file system not supported for /boot"
-msgstr "/target에 마운트한 파일 시스템이 없습니다"
+msgstr "/boot에 대해 btrfs 파일 시스템은 지원하지 않습니다"
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You have mounted a btrfs file system as /boot. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"JFS 파일 시스템을 /boot로 마운트했습니다. 설치 프로그램에서 기본으로 사용하"
-"는 부트로더에서 문제가 발생할 수 있습니다."
+"btrfs 파일 시스템을 /boot로 마운트했습니다. 이 파일시스템은 이 설치 프로그램"
+"에서 사용하는 부트로더에서 지원하지 않습니다."
 
 #. Type: error
 #. Description
 #. :sl2:
 #: ../partman-btrfs.templates:5001
-#, fuzzy
 msgid ""
 "You should use another file system, such as ext4, for the /boot partition."
-msgstr "/boot 파티션으로 ext3와 같은 다른 파일 시스템을 사용해야 합니다."
+msgstr "/boot 파티션으로 ext4와 같은 다른 파일 시스템을 사용해야 합니다."
