--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -6,7 +6,7 @@
 # translation of debian-installer_packages_po_sublevel1_da.po to
 # Danish messages for debian-installer.
 # This file is distributed under the same license as debian-installer.
-# Joe Hansen <joedalton2@yahoo.dk>, 2011, 2012, 2013, 2014, 2015, 2016.
+# Joe Hansen <joedalton2@yahoo.dk>, 2011, 2012, 2013, 2014, 2015, 2016, 2017.
 # Ask Hjorth Larsen <asklarsen@gmail.com>, 2010.
 # Mads Bille Lundby <lundbymads@gmail.com, 2009.
 # Henrik Christian Grove <debian@3001.dk>, 2008.
@@ -39,7 +39,7 @@ msgstr ""
 "Project-Id-Version: debian-installer_packages_po_sublevel1_da\n"
 "Report-Msgid-Bugs-To: partman-btrfs@packages.debian.org\n"
 "POT-Creation-Date: 2016-10-04 22:00+0000\n"
-"PO-Revision-Date: 2016-11-10 20:24+0200\n"
+"PO-Revision-Date: 2017-03-06 20:12+0200\n"
 "Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
 "Language-Team: <dansk@dansk-gruppen.dk>\n"
 "Language: da\n"
@@ -83,8 +83,8 @@ msgid ""
 "Your root file system is a btrfs file system. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"Dit rodfilsystem er et btrfs-filsystem. Dette kan give problemer med den "
-"opstartsindlæser, der som udgangspunkt bruges af dette installationsprogram."
+"Dit rodfilsystem er et btrfs-filsystem. Dette understøttes ikke af den "
+"opstartsindlæser, der bruges som standard af dette installationsprogram."
 
 #. Type: error
 #. Description
@@ -111,9 +111,8 @@ msgid ""
 "You have mounted a btrfs file system as /boot. This is not supported by the "
 "boot loader used by default by this installer."
 msgstr ""
-"Dit rodfilsystem er et btrfs-filsystem som /boot. Dette kan give problemer "
-"med den opstartsindlæser, der som udgangspunkt bruges af dette "
-"installationsprogram."
+"Du har monteret et btrfs-filsystem på /boot. Dette understøttes ikke af den "
+"opstartsindlæser der bruges som standard af dette installationsprogram."
 
 #. Type: error
 #. Description
